k8s/test-api-server.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: testapi-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: testapi
        version: v1
    spec:
      containers:
      - image: firestarthehack/test-api:latest
        name: test-api-container
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: testapi
spec:
  selector:
    app: testapi
  ports:
  - port: 3000
    targetPort: 80
    name: http
